[package]
name = "asm"
version = "0.3.0"
edition = "2021"
description = "A Rust library for decoding and encoding assembly of various architectures"
repository = "https://github.com/ATiltedTree/asm"
license = "MIT OR Apache-2.0"
keywords = ["assembly", "asm"]
categories = ["encoding"]
include = ["LICENSE-*", "src", "Cargo.toml", "README.md"]
rust-version = "1.56.0"

[package.metadata.docs.rs]
all-features = true

[features]
6502 = []
riscv = []

[dependencies]
bitflags = "1"
thiserror = "1.0.30"

[dev-dependencies]
asm = { path = ".", features = ["6502"] }